--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -5,15 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="public/scripts/comum.js" defer="defer"></script>
     <script src="public/scripts/login.js" defer="defer"></script>
+    <link rel="stylesheet" href="public/css/login.css">
     <title>FMS</title>
 </head>
 <body>
+    <div class="all">
+        <div class="esquerda"></div>
+    <div class="direita">
+    <div class="caixa">
     <form class="login" method="POST" id="form">
         Email: <input type="email" name="email" id="email"> <br>
         Senha: <input type="password" name="password" id="password"> <br>
         <input type="submit" value="Entrar"><br>
     </form>
+    </div>
     <p>Não está cadastrado? <a href="/join">Cadastre-se</a> </p>
-
+    </div>
+    </div>
 </body>
 </html>
